Test/git-issues/git-issue-2727.dfy.expect
git-issue-2727.dfy(9,13): Error: Constant not initialized yet. Missing initialization of field through the dependency a -> b, which needs to be assigned at this point.
git-issue-2727.dfy(25,11): Error: Constant not initialized yet. Missing initialization of field through the dependency a -> b, which needs to be assigned at this point.
2 resolution/type errors detected in git-issue-2727.dfy
